# AutoMLAgent

./: .gitignore  LICENSE  PLANNING.md  README.md  TASK.md  pyproject.toml
.github/workflows/: ci.yaml
data/flu_shot/: README.md
notes/: pydantic_ai_notes.md  ui_notes.md  vllm_model_notes.md
src/AutoMLAgent/: eda_agent.py
src/AutoMLAgent/dataclass/: column_info.py  df_info.py  polars_temporal.py
src/AutoMLAgent/eda/: eda_column_tools.py
src/AutoMLAgent/eda/column/: __init__.py  column_quality.py  column_stats.py  column_types.py  column_utils.py
src/AutoMLAgent/eda/df/: df_quality.py  df_stats.py  df_types.py
src/AutoMLAgent/logger/: mlflow_logger.py
src/__temp__/: eda_agent.py
src/__temp__/eda/: eda_column_tools.py
src/automlagent/: eda_agent.py
src/automlagent/dataclass/: column_info.py  column_type.py  df_info.py  polars_temporal.py
src/automlagent/eda/: eda_column_tool.py  eda_column_tools.py  eda_df_tool.py
src/automlagent/eda/column/: column_histogram.py  column_info_string.py  column_quality.py  column_stats.py  column_types.py  column_utils.py
src/automlagent/eda/df/: df_corr.py  df_histogram.py  df_info_string.py  df_quality.py  df_stats.py  df_types.py
src/automlagent/logger/: mlflow_logger.py
src/automlagent/types/: __init__.py  core.py
src/automlagent/utils/: column_df_info_utils.py  histogram_utils.py  info_theory_utils.py  typing_utils.py
tests/AutoMLAgent/: conftest.py
tests/AutoMLAgent/eda/column/: test_column_quality.py  test_column_stats.py
tests/automlagent_tests/eda/: test_eda_column_tool.py
tests/automlagent_tests/eda/column/: test_column_histogram.py  test_column_info_string.py  test_column_quality.py  test_column_stats.py  test_column_types.py  test_column_utils.py
tests/automlagent_tests/eda/df/: test_df_corr.py  test_df_info_string.py
tests/automlagent_tests/logger/: test_mlflow_logger.py
tests/automlagent_tests/utils/: test_column_df_info_utils.py  test_histogram_utils.py  test_typing_utils.py
tests/automodeler/eda/column/: test_column_quality.py
tests/eda/column/: test_column_quality.py
